Added small details

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -45,7 +45,7 @@
         "import seaborn as sns\n",
         "import pickle"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
         "\n",
         "cc_test_df"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,7 +593,7 @@
         "cc_train_df.set_index(\"Id\", inplace=True)\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -624,7 +624,7 @@
         "print(\"Dataframe information of the test dataset\")\n",
         "print(cc_test_df.info())\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,7 +756,7 @@
         "print(\"Dataframe description of the test dataset\")\n",
         "print(cc_test_df.describe())\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,7 +819,7 @@
         "# Dupplicate in the test dataset\n",
         "print(\"Number of dupplicate in the test set \", cc_test_df.duplicated().sum())\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,7 +840,7 @@
         "# Dropping the duplicate and keeping the first of the training  dataset\n",
         "cc_train_df.drop_duplicates(keep='first', inplace=True)\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -860,7 +860,7 @@
         "# Dupplicate in the test dataset\n",
         "print(\"Number of dupplicate in the test set \", cc_test_df.duplicated().sum())"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -940,7 +940,7 @@
         "columns = [var for var in columns if var not in columns_to_remove]\n",
         "columns"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1031,7 +1031,7 @@
         "  \n",
         "  "
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1751,7 +1751,7 @@
         "    \n",
         "cc_train_df"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2280,7 +2280,7 @@
       "source": [
         "cc_train_df.corr()[\"Class\"]"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2386,7 +2386,7 @@
         "columns_with_correlation = [var for var in columns if var not in columns_no_correlation]\n",
         "columns_with_correlation"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2452,7 +2452,7 @@
         "    \n",
         "    return formula_string\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2475,7 +2475,7 @@
         "\n",
         "formula_string"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2526,7 +2526,7 @@
         "    plt.show()\n",
         "    \n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2629,7 +2629,7 @@
         "  return model\n",
         "    \n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2748,7 +2748,7 @@
         "  \n",
         "  return training_df, test_df\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2935,7 +2935,7 @@
         "\n",
         "base_regression_model.summary()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3172,7 +3172,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3249,7 +3249,7 @@
         "\n",
         "sm.stats.anova_lm(base_regression_model, test=\"Chisq\", typ=3)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -3281,7 +3281,7 @@
       "source": [
         "base_regression_model.summary()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3522,7 +3522,7 @@
         "        \n",
         "  return model, cols_no_response"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3540,7 +3540,7 @@
         "print(columns_with_correlation_LR)\n",
         "model_with_pruned_df.summary()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3739,14 +3739,14 @@
         "id": "nr23w8imz4Yo"
       },
       "source": [
-        "# Final dataset with only the required comlumns and final datasets\n",
+        "# Final dataset with only the required comlumns\n",
         "\n",
         "columns_final_dataset = columns_with_correlation_LR + [\"Class\"]\n",
         "\n",
         "train_df_final = cc_train_df [columns_final_dataset]\n",
         "test_df_final = cc_test_df [columns_final_dataset]"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3761,7 +3761,7 @@
         "pickle.dump(test_df_final, open(\"/content/drive/My Drive/Colab Notebooks/test_df_final.pkl\", \"wb\"))\n",
         "\n"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     }
   ]
