Refined the comments

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -2937,6 +2937,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MnMSsxSAAPmF"
+      },
+      "source": [
+        "Use of the stats model to check the influential Features and to drop the feature which are not relevant to the model"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "vviedxl5Ye56",
@@ -3242,17 +3251,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SweFZfRebYxP"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "NfRk3tpZguUW",
         "outputId": "76c96ad8-5bdc-4112-8f19-d34cb73173f8",
         "colab": {
@@ -3261,7 +3259,7 @@
         }
       },
       "source": [
-        "# Anova doesn't run on the logistic regression model logit model\n",
+        "# Anova doesn't run on the logistic regression logit model\n",
         "\n",
         "sm.stats.anova_lm(base_regression_model, test=\"Chisq\", typ=3)"
       ],
@@ -3282,6 +3280,15 @@
             "\u001b[0;31mAttributeError\u001b[0m: 'LogitResults' object has no attribute 'ssr'"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cw6Gafe3A3BO"
+      },
+      "source": [
+        "As the Anova doesn't run other way needs to be defined to check the influential and non influential features"
       ]
     },
     {
@@ -3473,7 +3480,7 @@
         "id": "_RvocWsEsB2_"
       },
       "source": [
-        "From Above summary of the logistic model shows that the P values for some of the feature a too big and their coefficient is too small\n",
+        "From Above summary of the logistic model shows that the P values for some of the features are too big and their coefficient is too small, so they are not influential and can be pruned\n",
         "\n",
         "So will run a prune model for the logistic regression"
       ]
@@ -3484,7 +3491,6 @@
         "id": "knRgvF3jrBnI"
       },
       "source": [
-        "\n",
         "# function to prune the model with unnecessary features\n",
         "def prune_models_logit(dataframe, response_col_name):\n",
         "\n",
@@ -3746,7 +3752,7 @@
         "id": "xpEQrVCisVdq"
       },
       "source": [
-        "The pruning of the feature has improvel slightly the pseudo r square and now all the feature columns have the P value smaller than 0.05 as required."
+        "The pruning of the feature has improved slightly the pseudo r square and now all the feature columns have the P value smaller than 0.05 as required."
       ]
     },
     {
