Added more comments

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -618,7 +618,7 @@
         "id": "wFuZ-LW7s_cW"
       },
       "source": [
-        "## Check the missing value\n",
+        "## Check of the missing value\n",
         "\n",
         "The dataframe information and description along with the missing label plots shows that there isn't any missing or NA value\n"
       ]
@@ -815,6 +815,7 @@
       "source": [
         "## Duplicate values\n",
         "\n",
+        "Duplicate in the training dataset are dropped and the on in the test dataset are kept\n",
         "\n"
       ]
     },
@@ -1069,7 +1070,7 @@
         "id": "cA8qLadZvmPU"
       },
       "source": [
-        "There is correlation Between V4 and the Classification of the Fraud detection based on the above graphs and data dispersion\n",
+        "There is correlation Between Time and the Classification of the Fraud detection based on the above graphs and data dispersion\n",
         "\n",
         "Outliers none"
       ]
@@ -1754,9 +1755,11 @@
       },
       "source": [
         "## Remove the outliers\n",
+        "# first created the zip between the column and the value over which there are outliers\n",
         "vars_with_outliers_threshold_high = [(\"V4\", 15), (\"V5\", 40), (\"V6\", 25), (\"V7\", 60), (\"V9\", 15), (\"V10\", 20), (\"V13\", 6), (\"V15\", 6), (\"V16\", 10), (\"V20\", 27), (\"V21\", 20), (\"V22\", 10), (\"V24\", 25), (\"V27\", 13), (\"V28\", 20), (\"Amount\", 6000)]\n",
         "vars_with_outliers_threshold_low = [(\"V1\", -40), (\"V2\", -40), (\"V3\", -35), (\"V5\", -40), (\"V19\", -6), (\"V20\", -40), (\"V21\", -20), (\"V22\", -10), (\"V23\", -40), (\"V25\", -10), (\"V26\", -2), (\"V27\", -10), (\"V28\", -10)]\n",
         "\n",
+        "# for loops to get rid of the outliers greater and lower than threshold\n",
         "for var_name, threshold in vars_with_outliers_threshold_high:\n",
         "    cc_train_df = cc_train_df[cc_train_df[var_name] < threshold]\n",
         "    \n",
@@ -2278,6 +2281,7 @@
         "id": "RL12JLPTtbIR"
       },
       "source": [
+        "# correlation matrix between the features\n",
         "cc_train_df.corr()"
       ],
       "execution_count": null,
@@ -2294,6 +2298,7 @@
         }
       },
       "source": [
+        "# correlation array between the Class output and the other features\n",
         "cc_train_df.corr()[\"Class\"]"
       ],
       "execution_count": 16,
@@ -2385,6 +2390,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XPQd0Net5Pp6"
+      },
+      "source": [
+        "Found some features which have negligible correlation with the Class so will be removed"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8S2dM6GYGw0O",
@@ -2450,7 +2464,7 @@
       "source": [
         "## Statistical Modelling\n",
         "\n",
-        "Statistical modelling of the data"
+        "Statistical modelling of the data with Linear regression"
       ]
     },
     {
@@ -2734,7 +2748,7 @@
         "id": "XeVEGM7RCS1J"
       },
       "source": [
-        "As in the data frame there are columns with negative value the box cox transformation is not working\n",
+        "As in the data frame there are columns with negative value the box cox transformations are not working\n",
         "\n",
         "So to over come the issue i'm going to implement the solution as per:\n",
         "https://stats.stackexchange.com/questions/399435/which-constant-to-add-when-applying-box-cox-transformation-to-negative-values\n",
@@ -2891,7 +2905,7 @@
         "id": "GcbHt_RKhPGP"
       },
       "source": [
-        "\n",
+        "# create the statistical model with the new columns with the transformation\n",
         "numeric_data = column_cor_transform\n",
         "categorical_data = []\n",
         "\n",
@@ -2924,7 +2938,7 @@
       "source": [
         "All the Above was done under the assumption that the use of linear regression model needs to be used along with his assumption but that is my wrong assumption\n",
         "\n",
-        "The Logistic regression needs to be used along with his assumption whihc are different from the Linear regression\n"
+        "The Logistic regression needs to be used along with his assumption which are different from the Linear regression\n"
       ]
     },
     {
@@ -3142,15 +3156,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yu91cbmPfth6"
-      },
-      "source": [
-        "The Above "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "lg7yXcHgyujA"
       },
       "source": [
@@ -3220,7 +3225,7 @@
         "id": "h_fjp-Lca5iM"
       },
       "source": [
-        "from : https://medium.com/@dhiraj8899/top-5-assumptions-for-logistic-regression-96b11d24d357\n",
+        "From : https://medium.com/@dhiraj8899/top-5-assumptions-for-logistic-regression-96b11d24d357\n",
         "\n",
         "There are 5 assumption for the logistic regression:\n",
         "\n",
@@ -3237,7 +3242,7 @@
         "id": "sDTz890bbZYU"
       },
       "source": [
-        "Cjheck on the Logistic regression assumption\n",
+        "Check on the Logistic regression assumption\n",
         "\n",
         "1.   The heatmap of the dataframe shows no correlation between the features\n",
         "2.   The graphs of logit value against the features should be linear \n",
