Added some more comments

--- a/Fraud_Detection_Model.ipynb
+++ b/Fraud_Detection_Model.ipynb
@@ -6,8 +6,7 @@
       "name": "Fraud Detection Model.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMY30hDUwpxnp5AH+kHzm9q",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMsCq1Up9C/m0bxF4VhWtk1"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kamuma03/Fraud-Detection-Project/blob/main/Fraud_Detection_Model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -36,6 +25,7 @@
         }
       },
       "source": [
+        "# in Colab to intsall the library imbalanced-learn\n",
         "pip install -U imbalanced-learn"
       ],
       "execution_count": null,
@@ -538,7 +528,7 @@
       },
       "source": [
         "### 1. Model with Different Algorithms\n",
-        "Create the model with two different algorithms to see the performance with the data as it is\n",
+        "Create the model with various different algorithms to see the performance with the data as it is\n",
         "\n",
         "  Will evaluate the models with MSE and F1 score\n",
         "\n",
@@ -897,13 +887,16 @@
       "source": [
         "# definition of the function to model and score the classification with the random forest\n",
         "def random_forest_classifier(test, validation):\n",
+        "  # uncoupling the data with features and labels\n",
         "  x_test = test.loc[:, test.columns != 'Class']\n",
         "  y_test = test[\"Class\"]\n",
         "  x_val = validation.loc[:, validation.columns != 'Class']\n",
         "  y_val = validation[\"Class\"]\n",
+        "  # defining the model and fitting it\n",
         "  model= RandomForestClassifier(n_estimators=500, max_depth=400, max_samples=80000)\n",
         "  model.fit(x_test, y_test)\n",
         "\n",
+        "  # predicting with the test set and calculation of the score\n",
         "  test_prediction = model.predict(x_test)\n",
         "  print(\"training set score \", model.score(x_test, y_test))\n",
         "  f1_score_test = f1_score(y_test, test_prediction)\n",
@@ -911,7 +904,7 @@
         "  mse_test = mean_squared_error(y_test, test_prediction)\n",
         "  print(\"MSE training set score \", mse_test)\n",
         "\n",
-        "\n",
+        "  # predicting with the validation set and calculation of the score\n",
         "  validation_prediction = model.predict(x_val)\n",
         "  print(\"validation set score \", model.score(x_val, y_val))\n",
         "  f1_score_validation = f1_score(y_val, validation_prediction)\n",
@@ -934,6 +927,7 @@
         }
       },
       "source": [
+        "# Model with random classifiers and the base datasets\n",
         "model_1 = random_forest_classifier(train_set, validation_set)"
       ],
       "execution_count": null,
@@ -960,12 +954,16 @@
       "source": [
         "# definition of the function to model and score the classification with the support vector machine\n",
         "def svm(test, validation):\n",
+        "  # uncoupling the data with features and labels\n",
         "  x_test = test.loc[:, test.columns != 'Class']\n",
         "  y_test = test[\"Class\"]\n",
         "  x_val = validation.loc[:, validation.columns != 'Class']\n",
         "  y_val = validation[\"Class\"]\n",
+        "  # defining the model and fitting it\n",
         "  model= SVC(C=100000, kernel='rbf')\n",
         "  model.fit(x_test, y_test)\n",
+        "\n",
+        "  # predicting with the test set and calculation of the score\n",
         "  test_prediction = model.predict(x_test)\n",
         "  print(\"training set score \", model.score(x_test, y_test))\n",
         "  f1_score_test = f1_score(y_test, test_prediction)\n",
@@ -973,7 +971,7 @@
         "  mse_test = mean_squared_error(y_test, test_prediction)\n",
         "  print(\"MSE training set score \", mse_test)\n",
         "\n",
-        "\n",
+        "  # predicting with the validation set and calculation of the score\n",
         "  validation_prediction = model.predict(x_val)\n",
         "  print(\"validation set score \", model.score(x_val, y_val))\n",
         "  f1_score_validation = f1_score(y_val, validation_prediction)\n",
@@ -996,6 +994,7 @@
         }
       },
       "source": [
+        "# Model with SVM classifiers and the base datasets\n",
         "model_2 = svm(train_set, validation_set)"
       ],
       "execution_count": null,
@@ -1057,12 +1056,14 @@
         "def oversample_random(test):\n",
         "  x_test = test.loc[:, test.columns != 'Class']\n",
         "  y_test = test[\"Class\"]\n",
+        "  #definig the oversampler method\n",
         "  oversampler = imblearn.over_sampling.RandomOverSampler(random_state=0)\n",
         "  new_x_test, new_y_test = oversampler.fit_resample(x_test, y_test)\n",
         "  df = new_x_test\n",
         "  df[\"Class\"] = new_y_test\n",
         "  return df\n",
         "\n",
+        "# running the function for the oversampler\n",
         "oversample_train_set = oversample_random(train_set)\n"
       ],
       "execution_count": null,
@@ -1079,6 +1080,7 @@
         }
       },
       "source": [
+        "# Model with random classifiers and random oversampled datasets\n",
         "model_3 = random_forest_classifier(oversample_train_set, validation_set)"
       ],
       "execution_count": null,
@@ -1103,6 +1105,7 @@
         "id": "dlVq9eWsaVEB"
       },
       "source": [
+        "# Model with SVM classifiers and random oversampled datasets\n",
         "model_4 = svm(oversample_train_set, validation_set)"
       ],
       "execution_count": null,
@@ -1119,6 +1122,7 @@
         "def oversample_smote_svm(test):\n",
         "  x_test = test.loc[:, test.columns != 'Class']\n",
         "  y_test = test[\"Class\"]\n",
+        "  #defining the oversampler method\n",
         "  oversampler = imblearn.over_sampling.SVMSMOTE(random_state=42)\n",
         "  new_x_test, new_y_test = oversampler.fit_resample(x_test, y_test)\n",
         "  df = new_x_test\n",
@@ -1141,6 +1145,7 @@
         }
       },
       "source": [
+        "# Model with random classifiers oversampled datasets with smote and svm algorithms\n",
         "model_5 = random_forest_classifier(oversample_svm_train_set, validation_set)"
       ],
       "execution_count": null,
@@ -1165,6 +1170,7 @@
         "id": "KRvIrgFKhlZe"
       },
       "source": [
+        "# Model with SVM classifiers oversampled datasets with smote and svm algorithms  \n",
         "model_6 = svm(oversample_svm_train_set, validation_set)"
       ],
       "execution_count": null,
@@ -1210,6 +1216,7 @@
         "  df[\"Class\"] = new_y_test\n",
         "  return df\n",
         "\n",
+        "# calculation of the new dataset\n",
         "undersample_random_train_set = undersample_random(train_set)"
       ],
       "execution_count": null,
@@ -1544,14 +1551,18 @@
         }
       },
       "source": [
+        "# definition of the new random forest model because of the number of sample size which is lower\n",
+        "\n",
         "def random_forest_classifier_undersample(test, validation):\n",
         "  x_test = test.loc[:, test.columns != 'Class']\n",
         "  y_test = test[\"Class\"]\n",
         "  x_val = validation.loc[:, validation.columns != 'Class']\n",
-        "  y_val = validation[\"Class\"]\n",
+        "  y_val = validation[\"Class\"]#\n",
+        "  # definition of the model with small max sample size\n",
         "  model= RandomForestClassifier(n_estimators=500, max_depth=400, max_samples=300)\n",
         "  model.fit(x_test, y_test)\n",
         "\n",
+        "  #predictiong the training set and calculation of the scores\n",
         "  test_prediction = model.predict(x_test)\n",
         "  print(\"training set score \", model.score(x_test, y_test))\n",
         "  f1_score_test = f1_score(y_test, test_prediction)\n",
@@ -1559,7 +1570,7 @@
         "  mse_test = mean_squared_error(y_test, test_prediction)\n",
         "  print(\"MSE training set score \", mse_test)\n",
         "\n",
-        "\n",
+        "  #predictiong the validation set and calculation of the scores\n",
         "  validation_prediction = model.predict(x_val)\n",
         "  print(\"validation set score \", model.score(x_val, y_val))\n",
         "  f1_score_validation = f1_score(y_val, validation_prediction)\n",
@@ -1568,6 +1579,7 @@
         "  print(\"MSE training set score \", mse_validation)\n",
         "  return model\n",
         "\n",
+        "# Model with random classifiers undersampled datasets \n",
         "model_7 = random_forest_classifier_undersample(undersample_random_train_set, validation_set)"
       ],
       "execution_count": null,
@@ -1597,6 +1609,7 @@
         }
       },
       "source": [
+        "# Model with SVM classifiers undersampled datasets \n",
         "model_8 = svm(undersample_random_train_set, validation_set)"
       ],
       "execution_count": null,
@@ -1653,6 +1666,7 @@
         }
       },
       "source": [
+        "# Model with random classifiers and base datasets \n",
         "model_1 = random_forest_classifier(train_set, validation_set)"
       ],
       "execution_count": null,
@@ -1760,17 +1774,6 @@
       "source": [
         "In this case the test set accuracy is 80% so model_1 with standard dataset is able to generalize better "
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "htmEKYXBB2Ei"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
