--- a/Fraud_Detection_Model.ipynb
+++ b/Fraud_Detection_Model.ipynb
@@ -18,42 +18,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "m7aCYnEQXsQJ",
-        "outputId": "953ae5f8-5885-453a-e709-26b70e29a168",
+        "outputId": "a74dd020-4005-47ed-fb15-42b1fc17caf5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 383
+          "height": 129
         }
       },
       "source": [
         "# in Colab to intsall the library imbalanced-learn\n",
         "pip install -U imbalanced-learn"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Collecting imbalanced-learn\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c8/81/8db4d87b03b998fda7c6f835d807c9ae4e3b141f978597b8d7f31600be15/imbalanced_learn-0.7.0-py3-none-any.whl (167kB)\n",
-            "\r\u001b[K     |██                              | 10kB 19.5MB/s eta 0:00:01\r\u001b[K     |████                            | 20kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████▉                          | 30kB 3.6MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 40kB 4.0MB/s eta 0:00:01\r\u001b[K     |█████████▉                      | 51kB 3.4MB/s eta 0:00:01\r\u001b[K     |███████████▊                    | 61kB 3.7MB/s eta 0:00:01\r\u001b[K     |█████████████▊                  | 71kB 4.1MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 81kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████▋              | 92kB 4.7MB/s eta 0:00:01\r\u001b[K     |███████████████████▋            | 102kB 4.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████▋          | 112kB 4.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████▌        | 122kB 4.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▌      | 133kB 4.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▌    | 143kB 4.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 153kB 4.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 163kB 4.6MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 174kB 4.6MB/s \n",
-            "\u001b[?25hRequirement already satisfied, skipping upgrade: scipy>=0.19.1 in /usr/local/lib/python3.6/dist-packages (from imbalanced-learn) (1.4.1)\n",
-            "Collecting scikit-learn>=0.23\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5c/a1/273def87037a7fb010512bbc5901c31cfddfca8080bc63b42b26e3cc55b3/scikit_learn-0.23.2-cp36-cp36m-manylinux1_x86_64.whl (6.8MB)\n",
-            "\u001b[K     |████████████████████████████████| 6.8MB 13.9MB/s \n",
-            "\u001b[?25hRequirement already satisfied, skipping upgrade: numpy>=1.13.3 in /usr/local/lib/python3.6/dist-packages (from imbalanced-learn) (1.18.5)\n",
-            "Requirement already satisfied, skipping upgrade: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from imbalanced-learn) (0.16.0)\n",
-            "Collecting threadpoolctl>=2.0.0\n",
-            "  Downloading https://files.pythonhosted.org/packages/f7/12/ec3f2e203afa394a149911729357aa48affc59c20e2c1c8297a60f33f133/threadpoolctl-2.1.0-py3-none-any.whl\n",
-            "Installing collected packages: threadpoolctl, scikit-learn, imbalanced-learn\n",
-            "  Found existing installation: scikit-learn 0.22.2.post1\n",
-            "    Uninstalling scikit-learn-0.22.2.post1:\n",
-            "      Successfully uninstalled scikit-learn-0.22.2.post1\n",
-            "  Found existing installation: imbalanced-learn 0.4.3\n",
-            "    Uninstalling imbalanced-learn-0.4.3:\n",
-            "      Successfully uninstalled imbalanced-learn-0.4.3\n",
-            "Successfully installed imbalanced-learn-0.7.0 scikit-learn-0.23.2 threadpoolctl-2.1.0\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-b25484c7c9df>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    pip install -U imbalanced-learn\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
         }
       ]
     },
@@ -69,7 +52,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EAH5NSDy2RGB"
+        "id": "EAH5NSDy2RGB",
+        "outputId": "4de40bf2-fc3c-4f2b-d5d7-e9e4f0b2a41c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Import of all the required libraries\n",
@@ -89,8 +76,23 @@
         "from sklearn.model_selection import train_test_split\n",
         "import imblearn"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/externals/six.py:31: FutureWarning:\n",
+            "\n",
+            "The module is deprecated in version 0.21 and will be removed in version 0.23 since we've dropped support for Python 2.7. Please rely on the official version of six (https://pypi.org/project/six/).\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/deprecation.py:144: FutureWarning:\n",
+            "\n",
+            "The sklearn.neighbors.base module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.neighbors. Anything that cannot be imported from sklearn.neighbors is now part of the private API.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
